--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-numpy==1.26.4
-pandas==2.2.2
-streamlit==1.34.0
-xgboost==2.0.3
+streamlit==1.3.0
+pandas==1.3.3
+numpy==1.21.2
+xgboost==1.5.0
+scikit-learn==0.24.2
+
